   Save document indent width with the session.
 * src/ui_utils.h, src/socket.c, src/ui_utils.c, doc/geany.txt,
   doc/geany.html, TODO:
   Use a separate socket per workspace on X (patch by Erik de Castro
   Lopo, thanks).
 * src/callbacks.c:
   Prompt for reloading if the document has an undo stack to avoid
   losing undo ability on accidental reloading (patch by Colomban
   Wendling, thanks).


2010-09-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/main.c:
   Ignore directories passed on the command-line (based on patch by
   Erik de Castro Lopo, thanks).
 * tagmanager/c.c:
   Parse D function template names.
 * src/interface.c, src/callbacks.c, src/callbacks.h, src/keyfile.c,
   src/document.c, src/editor.c, src/editor.h, src/ui_utils.c,
   geany.glade:
   Allow per-document indent width setting (patch by Jiří Techet,
   updated by Erik de Castro Lopo - thanks).
 * src/interface.c, src/callbacks.c, src/callbacks.h, geany.glade:
   Combine indent width menu item callbacks.
 * src/interface.c, geany.glade:
   Don't translate indent width menu items as they are now used for
   atoi().


2010-09-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/keybindings.c, src/ui_utils.c, geany.glade:
   Remove 3 popup menu items to save space:
   Find Document Usage because Find Usage can be used instead.
   Go to Tag Declaration because Go to Tag Definition is more common.
   Go to Line because the toolbar item can be used instead.
 * src/tools.c, src/search.c, tagmanager/python.c:
   Fix some 'possible' NULL pointer dereferences (based on patch by
   Erik de Castro Lopo).
 * src/keybindings.c, src/keybindings.h, src/prefs.c:
   Simplify keybindings_check_event().


2010-09-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c:
   Use up/down icons for Previous/Next Error.
 * src/interface.c, src/keybindings.c, src/callbacks.c,